Add ability to see previous versions of an application (#571)